make sure items wrap

--- a/packages/products-used/style.module.css
+++ b/packages/products-used/style.module.css
@@ -17,6 +17,7 @@
 .productList {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   padding: 0;
 
   & .isVerticallyCentered {
